Mon Aug  4 18:01:52 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_valuetype/valuetype_ch.cpp:

          Fixed bug in generating inheritance list for event types.
          Thanks to George Edwards <edwardsgt@isis.vanderbilt.edu> for
          pointing out the bug.

Mon Aug  4 21:02:12 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * tests/Bug_1551_Regression/Hello.h:
          Changed ACE_Thread_Mutex::ACE_Thread_Mutex to TAO_SYNCH_MUTEX.

        * tests/Queued_Message_Test/Queued_Message_Test.cpp:
          Added #include ACE.

Mon Aug  4 11:48:46 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* orbsvcs/tests/FaultTolerance/Makefile:
	* orbsvcs/tests/FaultTolerance/Makefile.bor: Added
	  GroupRef_Manipulation test to the daily builds.

	* orbsvcs/tests/FaultTolerance/GroupRef_Manipulation/svc.conf:
	  This file is not needed.

Mon Aug  4 11:06:55 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/Tagged_Components.cpp (remove_component):
	* tao/Tagged_Components.h: Added a new method which removes tagged
	  components from the list of tagged components based on component
	  id. 

	* tao/IORManipulation/IOR.pidl: 
	* tao/IORManipulation/IORC.cpp:
	* tao/IORManipulation/IORC.h:
	* tao/IORManipulation/IORC.i: A new operation, remove_primary_tag
	  ()  on TAO_IOP::TAO_IOR_Property interface. Please see
	  documentation for details. 

	  Further all operations in TAO_IOP::TAO_IOR_Property interface
	  that modify parameters have been made inout instead of just
	  in. This was causing all sorts of confusion for a normal user. 
	
	* tao/IORManipulation/IORManipulation.cpp:
	* tao/IORManipulation/IORManipulation.h: A concrete implementation
	  of remove_primary_tag () within the IORManipulation library. 

	* orbsvcs/orbsvcs/FaultTolerance/FT_IOGR_Property.cpp:
	* orbsvcs/orbsvcs/FaultTolerance/FT_IOGR_Property.h: A concrete
	  implementation of remove_primary_tag () within the
	  FaultTolerance library.  